Changed the availability grid look. Partially fixed the mouse out of bounds problem. Changed the project name + minor updates

--- a/frontend/src/features/Availability/components/AvailabilityColumn/availabilityColumn.scss
+++ b/frontend/src/features/Availability/components/AvailabilityColumn/availabilityColumn.scss
@@ -23,45 +23,59 @@
     flex-direction: column;
     box-sizing: border-box;
 
-    &:first-of-type {
-        .TimeWindow {
-            border-left: 1px solid $textOnDarkColor;
-        } 
-    }
+    // &:first-of-type {
+    //     .TimeWindow {
+    //         border-left: 1px solid $textOnDarkColor;
+    //     } 
+    // }
 
-    &:last-of-type {
-        .TimeWindow {
-            border-right: 1px solid $textOnDarkColor;
-        } 
-    }
+    // &:last-of-type {
+    //     .TimeWindow {
+    //         border-right: 1px solid $textOnDarkColor;
+    //     } 
+    // }
 }
 
 .TimeWindow{
     width: 100%;
     height: 1.125rem;
     box-sizing: border-box;
-    cursor: crosshair;
-    border-right: 1px solid #545C65;
+    cursor: pointer;
+    border: 1px solid $backgroundDarkColor;
+    background-color: $backgroundDarkColorHover2;
+    border-right: 2px solid $backgroundDarkColor;
 
-    &:first-of-type {
-        border-top: 1px solid $textOnDarkColor !important;
-    }
-
-    &:last-of-type {
-        border-bottom: 1px solid $textOnDarkColor !important;
-    }
-
-    &:nth-of-type(odd) {
-        border-bottom: 1px solid #39414b;
+    &:hover {
+        background-color: $backgroundDarkColorHover;
     }
 
     &:nth-of-type(even) {
-        border-bottom: 2px solid #666e77;
+        border-bottom: 3px solid $backgroundDarkColor;
     }
 }
 
 .TimeWindow--selected {
+    background-color: $primaryColorHover;
+
+    &:hover {
+        background-color: $primaryColorHover;
+    }
+}
+
+.TimeWindow--deselected {
+    background-color: $primaryColorDeselect;
+
+    &:hover {
+        background-color: $primaryColorDeselect;
+    }
+}
+
+.TimeWindow--saved {
     background-color: $primaryColor1;
+
+    &:hover {
+        background-color: $primaryColorHover;
+    }
 }
 
 .TimesColumn {
